cmd/pint/tests/0004_fail_invalid_yaml.txt
! exec pint --no-color lint rules
! stdout .
cmp stderr stderr.txt

-- stderr.txt --
level=INFO msg="Loading configuration file" path=.pint.hcl
level=INFO msg="Finding all rules to check" paths=["rules"]
level=WARN msg="Failed to parse file content" err="error at line 4: did not find expected key" path=rules/bad.yaml lines=1-7
level=INFO msg="Checking Prometheus rules" entries=2 workers=10 online=true
rules/bad.yaml:4 Fatal: did not find expected key (yaml/parse)
 4 | 

rules/ok.yml:5 Fatal: Prometheus failed to parse the query with this PromQL error: unclosed left bracket. (promql/syntax)
 5 |     expr: sum(foo[5m)

level=INFO msg="Problems found" Fatal=2
level=ERROR msg="Fatal error" err="found 1 problem(s) with severity Bug or higher"
-- rules/ok.yml --
groups:
- name: foo
  rules:
  - record: sum:missing
    expr: sum(foo[5m)

-- rules/bad.yaml --
xxx:
  xxx:
  xxx:

- xx
- yyy

-- .pint.hcl --
parser {
  relaxed = [".*"]
}
